# FeintLex

./: .env.example  .gitignore  CODEX.md  PROGRAM.md  README.md  pyproject.toml
feintlex/: __init__.py  app.py  browser.py  cli.py  config.py  db.py  logging_config.py  models.py
feintlex/integrations/: __init__.py  discord.py  feintcommand.py  feintvault.py
feintlex/prompts/: lesson_generation.md  quiz_generation.md  sentence_autopsy.md  writing_correction.md
feintlex/routes/: autopsy.py  content.py  health.py  lessons.py  methods.py  program.py  progress.py  tutor.py  vocabulary.py  writing.py
feintlex/services/: __init__.py  ai_providers.py  backup.py  conjugator.py  content_importer.py  exports.py  hq.py  lesson_generator.py  lexicon.py  methods.py  mistake_bank.py  program.py  quiz_generator.py  review_queue.py  sentence_autopsy.py  srs.py  tutor.py  tutor_chat.py  vocabulary.py  writing_coach.py
feintlex/static/: dashboard.css  dashboard.html  dashboard.js
scripts/: create_desktop_shortcut.ps1  feint_browser.ps1  launch_dashboard.ps1  run_api.ps1  run_cli.ps1
tests/: conftest.py  test_browser.py  test_capture_and_tools.py  test_content_and_lesson.py  test_dashboard.py  test_db.py  test_exports.py  test_health.py  test_hq.py  test_methods.py  test_mistake_bank.py  test_program.py  test_review_queue.py  test_sentence_autopsy.py  test_tutor.py  test_tutor_chat.py  test_vocabulary.py
